--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PI_Replication_Tool"
         mc:Ignorable="d"
-        Title="Accueil" Height="450" Width="800">
+        Title="Accueil" 
+        Height="450" 
+        Width="800"
+        WindowStartupLocation="CenterScreen">
     <Grid>
         
     </Grid>
