--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -9,4 +9,8 @@
         Height="450" 
         Width="800"
         WindowStartupLocation="CenterScreen">
+    <Grid>
+            
+    </Grid>
+   
 </Window>
