--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,6 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PI_Replication_Tool"
         mc:Ignorable="d"
-        Title="Accueil" 
         Height="450" 
         Width="800"
         WindowStartupLocation="CenterScreen">
@@ -18,21 +17,56 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="80*"/>
-            <RowDefinition Height="185*"/>
-            <RowDefinition Height="40*"/>
+            <RowDefinition Height="25*"/>
+            <RowDefinition Height="25*"/>
+            <RowDefinition Height="150*"/>
+            <RowDefinition Height="26*"/>
             <RowDefinition Height="40"/>
         </Grid.RowDefinitions>
 
-        <Image Grid.Column="3" Grid.Row="0" Margin="60 10 0 30">
+        <!-- Navigation Bar -->
+        <Image Grid.Column="0" Grid.Row="0" Margin="-35,10,55,15" >
+            <Image.Source>
+                <BitmapImage  UriSource="/Resources/CGI.png" />
+            </Image.Source>
+        </Image>
+        <Image Grid.Column="3" Grid.Row="0" Margin="60 0 0 0" >
             <Image.Source>
                 <BitmapImage  UriSource="/Resources/TotalEnergies.png" />
             </Image.Source>
         </Image>
+        <TextBlock Grid.Column="1" Grid.ColumnSpan="2" TextAlignment="Center" VerticalAlignment="Center" FontSize="14" FontWeight="Bold" Height="18" FontFamily="Arial">PI Replication Tool</TextBlock>
 
-        <TextBlock Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2" TextAlignment="Center" VerticalAlignment="Center" FontSize="14">PI Replication Tool</TextBlock>
+        <!-- Source Affiliate -->
+        <TextBlock Grid.Column="0" Grid.Row="2" TextAlignment="Center" VerticalAlignment="Top" FontWeight="Bold" Height="18" Grid.ColumnSpan="2" Margin="118,35,82,0" FontFamily="Arial">Source Affiliate</TextBlock>
+        <Grid Background="Gray" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" VerticalAlignment="Center" Height="131" Margin="95,0,60,0">
+            <ListView x:Name="listAffiliateSource" HorizontalAlignment="Center" Height="131" VerticalAlignment="Center" Width="245" RenderTransformOrigin="0.5,0.5">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Header="#" Width="50" DisplayMemberBinding="{Binding id}"/>
+                        <GridViewColumn Header="data" Width="200" DisplayMemberBinding="{Binding data}"/>
+                    </GridView>
+                </ListView.View>
+            </ListView>
+        </Grid>
 
-        <Button Grid.Column="3" Grid.Row="2" Margin="40 0 40 0">Continue</Button>
+        <!-- Source Server -->
+        <TextBlock Grid.Column="2" Grid.Row="2" TextAlignment="Center" VerticalAlignment="Top" FontWeight="Bold" Height="18" Grid.ColumnSpan="2" Margin="82,35,118,0" FontFamily="Arial">Source Server</TextBlock>
+        <Grid Background="Gray" Grid.Column="2" Grid.ColumnSpan="3" Grid.Row="2" VerticalAlignment="Center" Height="131" Margin="60,0,95,0">
+            <ListView x:Name="listServerSource" HorizontalAlignment="Center" Height="197" VerticalAlignment="Top" Width="245" RenderTransformOrigin="0.5,0.5">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Header="#" Width="50" DisplayMemberBinding="{Binding id}"/>
+                        <GridViewColumn Header="data" Width="200" DisplayMemberBinding="{Binding data}"/>
+                    </GridView>
+                </ListView.View>
+            </ListView>
+        </Grid>
+
+        <!-- Button Side -->
+        <Button Grid.Column="3" Grid.Row="3" Margin="50,5,50,5">Continue</Button>
+
+        <!-- Log Side TO DO -->
 
     </Grid>
 
