--- a/Application/MainWindow.xaml
+++ b/Application/MainWindow.xaml
@@ -64,7 +64,7 @@
         </Grid>
 
         <!-- Button Side -->
-        <Button Grid.Column="3" Grid.Row="3" Margin="50,5,50,5">Continue</Button>
+        <Button Grid.Column="3" Grid.Row="3" Margin="50,5,50,5" Click="Button_Continue_Click">Continue</Button>
 
         <!-- Log Side TO DO -->
 
