--- a/Application/MVVM/Views/MainWindow.xaml
+++ b/Application/MVVM/Views/MainWindow.xaml
@@ -27,18 +27,18 @@
         <!-- Navigation Bar -->
         <Image Grid.Column="0" Grid.Row="0" Margin="-35,10,55,15" >
             <Image.Source>
-                <BitmapImage  UriSource="/Resources/CGI.png" />
+                <BitmapImage  UriSource="/Assets/CGI.png" />
             </Image.Source>
         </Image>
         <Image Grid.Column="3" Grid.Row="0" Margin="60 0 0 0" >
             <Image.Source>
-                <BitmapImage  UriSource="/Resources/TotalEnergies.png" />
+                <BitmapImage  UriSource="/Assets/TotalEnergies.png" />
             </Image.Source>
         </Image>
         <TextBlock Grid.Column="1" Grid.ColumnSpan="2" TextAlignment="Center" VerticalAlignment="Center" FontSize="14" FontWeight="Bold" Height="18" FontFamily="Arial">PI Replication Tool</TextBlock>
 
-        <!-- Source Affiliate -->
-        <TextBlock Grid.Column="0" Grid.Row="2" TextAlignment="Center" VerticalAlignment="Top" FontWeight="Bold" Height="18" Grid.ColumnSpan="2" Margin="118,35,82,0" FontFamily="Arial">Source Affiliate</TextBlock>
+        <!-- Source Server -->
+        <TextBlock Grid.Column="0" Grid.Row="2" TextAlignment="Center" VerticalAlignment="Top" FontWeight="Bold" Height="18" Grid.ColumnSpan="2" Margin="118,35,82,0" FontFamily="Arial">Source Server</TextBlock>
         <Grid Background="Gray" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" VerticalAlignment="Center" Height="131" Margin="95,0,60,0">
             <ListView x:Name="listAffiliateSource" HorizontalAlignment="Center" Height="131" VerticalAlignment="Center" Width="245" RenderTransformOrigin="0.5,0.5">
                 <ListView.View>
