--- a/Application/MVVM/Views/MainWindow.xaml
+++ b/Application/MVVM/Views/MainWindow.xaml
@@ -31,28 +31,14 @@
 
         <!-- Source Server -->
         <TextBlock Grid.Column="0" Grid.Row="2" TextAlignment="Center" VerticalAlignment="Top" FontWeight="Bold" Height="18" Grid.ColumnSpan="2" Margin="118,35,82,0" FontFamily="Arial">Source Server</TextBlock>
-        <Grid Background="Gray" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" VerticalAlignment="Center" Height="131" Margin="95,0,60,0">
-            <ListView x:Name="listSourceServer" Foreground="white" HorizontalAlignment="Center" Height="131" VerticalAlignment="Center" Width="245" RenderTransformOrigin="0.5,0.5">
-                <ListView.View>
-                    <GridView>
-                        <!-- <GridViewColumn Header="#" Width="50" DisplayMemberBinding="{Binding id}"/> -->
-                        <!-- <GridViewColumn Header="data" Width="200" DisplayMemberBinding="{Binding data}"/> -->
-                    </GridView>
-                </ListView.View>
-            </ListView>
+        <Grid Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" VerticalAlignment="Center" Height="131" Margin="95,0,60,0">
+            <ListView x:Name="listSourceServer" HorizontalAlignment="Center" VerticalAlignment="Center" Width="245" RenderTransformOrigin="0.5,0.5"/>
         </Grid>
 
         <!-- Target Server -->
         <TextBlock Grid.Column="2" Grid.Row="2" TextAlignment="Center" VerticalAlignment="Top" FontWeight="Bold" Height="18" Grid.ColumnSpan="2" Margin="82,35,118,0" FontFamily="Arial">Target Server</TextBlock>
-        <Grid Background="Gray" Grid.Column="2" Grid.ColumnSpan="3" Grid.Row="2" VerticalAlignment="Center" Height="131" Margin="60,0,95,0">
-            <ListView x:Name="listTargetServer" HorizontalAlignment="Center" Height="197" VerticalAlignment="Top" Width="245" RenderTransformOrigin="0.5,0.5">
-                <ListView.View>
-                    <GridView>
-                        <GridViewColumn Header="#" Width="50" DisplayMemberBinding="{Binding id}"/>
-                        <GridViewColumn Header="data" Width="200" DisplayMemberBinding="{Binding data}"/>
-                    </GridView>
-                </ListView.View>
-            </ListView>
+        <Grid Grid.Column="2" Grid.ColumnSpan="3" Grid.Row="2" VerticalAlignment="Center" Height="131" Margin="95,0,60,0">
+            <ListView x:Name="listTargetServer" HorizontalAlignment="Center" VerticalAlignment="Center" Width="245" RenderTransformOrigin="0.5,0.5"/>
         </Grid>
 
         <!-- Button Side -->
