--- a/Application/MVVM/Views/MainWindow.xaml
+++ b/Application/MVVM/Views/MainWindow.xaml
@@ -2,8 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PI_Replication_Tool"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:viewmodels="clr-namespace:PI_Replication_Tool.MVVM.ViewModels"
         mc:Ignorable="d"
         Height="650" Width="1200"
         Background="#36393F"
@@ -11,7 +10,7 @@
         WindowStyle="None">
 
     <Window.DataContext>
-        <viewmodel:MainViewModel/>
+        <viewmodels:MainViewModel />
     </Window.DataContext>
 
     <Grid>
@@ -87,7 +86,7 @@
         </Grid>
 
         <Grid Grid.Row="3" Grid.Column="0">
-            <ListView x:Name="listSourceServer" ItemsSource="{Binding listSourceServer}" HorizontalAlignment="Center" VerticalAlignment="Center" Width="245" RenderTransformOrigin="0.5,0.5" />
+            <ListView x:Name="listSourceServer" ItemsSource="{Binding ListSourceServer}" HorizontalAlignment="Center" VerticalAlignment="Center" Width="245" RenderTransformOrigin="0.5,0.5" />
         </Grid>
 
         <Grid Grid.Row="3" Grid.Column="1">
@@ -102,8 +101,9 @@
 
             <Button Grid.Column="3" Grid.Row="3" 
                     HorizontalAlignment="Center" 
-                    VerticalAlignment="Center" 
-                    Click="Button_Continue_Click">Continue</Button>
+                    VerticalAlignment="Center"
+                    Command="{Binding ContinueButton}">
+            </Button>
         </Grid>
     </Grid>
 </Window>
