--- a/Application/MVVM/Views/MainWindow.xaml
+++ b/Application/MVVM/Views/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="PI_Replication_Tool.MainWindow"
+﻿<Window x:Class="Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PI_Replication_Tool"
+        xmlns:Viewmodel="clr-namespace:ViewModels"
         mc:Ignorable="d"
         Height="650" Width="1200"
         Background="#36393F"
@@ -11,7 +11,7 @@
         WindowStyle="None">
 
     <Window.DataContext>
-        <viewmodel:MainViewModel/>
+        <Viewmodel:MainViewModel/>
     </Window.DataContext>
 
     <Grid>
@@ -103,7 +103,7 @@
             <Button Grid.Column="3" Grid.Row="3" 
                     HorizontalAlignment="Center" 
                     VerticalAlignment="Center" 
-                    Click="Button_Continue_Click">Continue</Button>
+                    Command="{Binding ButtonContinue}">Continue</Button>
         </Grid>
     </Grid>
 </Window>
