--- a/Application/MVVM/Views/ConnectionWindow.xaml
+++ b/Application/MVVM/Views/ConnectionWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Views.MainWindow"
+﻿<Window x:Class="Views.ConnectionWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,16 +8,16 @@
         Height="650" Width="1200"
         Background="#36393F"
         ResizeMode="CanResizeWithGrip"
-        WindowStyle="None">
+        WindowStyle="None"
+        AllowsTransparency="True">
 
     <Window.DataContext>
-        <Viewmodel:MainViewModel/>
+        <Viewmodel:ConnectionViewModel/>
     </Window.DataContext>
 
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="25"/>
-            <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="68*" />
             <RowDefinition Height="50"/>
@@ -25,22 +25,24 @@
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="600"/>
-            <ColumnDefinition Width="600"/>
+            <ColumnDefinition Width="150"/>
+            <ColumnDefinition Width="550"/>
+            <ColumnDefinition Width="500"/>
         </Grid.ColumnDefinitions>
 
-        <Border Grid.ColumnSpan="2"
+        <Border Grid.ColumnSpan="3"
                 Background="#252525"
                 MouseDown="Border_MouseDown" >
 
 
             <Grid HorizontalAlignment="Stretch">
                 <Label HorizontalAlignment="Left"
-                       Content="PI Replication Tool"
-                       Foreground="Gray" />
+                       Content="PI Server Connection"
+                       Foreground="Gray"
+                       FontWeight="SemiBold"/>
 
                 <StackPanel HorizontalAlignment="Right"
-                            Orientation="Horizontal" Grid.ColumnSpan="2">
+                            Orientation="Horizontal" Grid.ColumnSpan="3">
 
 
                     <Button Width="20" Height="20" 
@@ -71,6 +73,55 @@
             </Grid>
         </Border>
 
+        <Grid Background="#2F3136"
+              Grid.Row="1"
+              Grid.RowSpan="5">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="40" />
+                <RowDefinition Height="40" />
+                <RowDefinition Height="40" />
+                <RowDefinition/>
+                <RowDefinition Height="60"/>
+            </Grid.RowDefinitions>
+
+            <Label Content="Connection"
+                   VerticalAlignment="Center"
+                   FontWeight="Medium"
+                   Foreground="Gray"
+                   Margin="8,0,0,0"/>
+
+            <ListView ItemsSource="{Binding Connection}" 
+                      Background="Transparent"
+                      BorderThickness="0"
+                      Grid.Row="0"
+                      ItemContainerStyle="{StaticResource ConnectionCard}"/>
+
+            <Label Content="Load Tags Attributes"
+                   VerticalAlignment="Center"
+                   FontWeight="Medium"
+                   Foreground="Gray"
+                   Margin="8,0,0,0"
+                   Grid.Row="1"/>
+
+            <ListView ItemsSource="{Binding LoadTagsAttributes}" 
+                      Background="Transparent"
+                      BorderThickness="0"
+                      Grid.Row="1"/>
+
+            <Label Content="Push Tags Attributes"
+                   VerticalAlignment="Center"
+                   FontWeight="Medium"
+                   Foreground="Gray"
+                   Margin="8,0,0,0"
+                   Grid.Row="2"/>
+
+            <ListView ItemsSource="{Binding PushTagsAttributes}" 
+                      Background="Transparent"
+                      BorderThickness="0"
+                      Grid.Row="2"/>
+
+        </Grid>
+        
         <Grid Grid.Row="1"
               Grid.ColumnSpan="3">
             <Grid.ColumnDefinitions>
@@ -86,15 +137,15 @@
 
         </Grid>
 
-        <Grid Grid.Row="3" Grid.Column="0">
+        <Grid Grid.Row="2" Grid.Column="1">
             <ListView x:Name="listSourceServer" ItemsSource="{Binding ListSourceServer}" SelectedItem="{Binding SelectedSourceServer}" HorizontalAlignment="Center" VerticalAlignment="Center" Width="245" RenderTransformOrigin="0.5,0.5" />
         </Grid>
 
-        <Grid Grid.Row="3" Grid.Column="1">
+        <Grid Grid.Row="2" Grid.Column="2">
             <ListView x:Name="listTargetServer" ItemsSource="{Binding ListTargetServer}" SelectedItem="{Binding SelectedTargetServer}" HorizontalAlignment="Center" VerticalAlignment="Center" Width="245" RenderTransformOrigin="0.5,0.5"/>
         </Grid>
 
-        <Grid Grid.Row="4" Grid.Column="0">
+        <Grid Grid.Row="3" Grid.Column="1">
             <Button 
                     HorizontalAlignment="Center" 
                     VerticalAlignment="Center" 
@@ -103,7 +154,7 @@
             </Button>
         </Grid>
 
-        <Button Grid.Row="4" Grid.Column="1"
+        <Button Grid.Row="3" Grid.Column="2"
                     HorizontalAlignment="Center" 
                     VerticalAlignment="Center" 
                     Command="{Binding ButtonConnectTargetServer}">
@@ -112,7 +163,7 @@
         
         <Grid Grid.Row="4" Grid.Column="2">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="450"/>
+                <ColumnDefinition Width="370"/>
                 <ColumnDefinition Width="150" />
             </Grid.ColumnDefinitions>
             
