Connection OK with messagebox before implementing navigation

--- a/Application/MVVM/Views/ConnectionWindow.xaml
+++ b/Application/MVVM/Views/ConnectionWindow.xaml
@@ -37,7 +37,7 @@
 
             <Grid HorizontalAlignment="Stretch">
                 <Label HorizontalAlignment="Left"
-                       Content="PI Server Connection"
+                       Content="PI Replication Tool"
                        Foreground="Gray"
                        FontWeight="SemiBold"/>
 
