--- a/Application/App.xaml
+++ b/Application/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application x:Class="PI_Replication_Tool.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="/MVVM/Views/ConnectionWindow.xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+            <!--StartupUri="/MVVM/Views/MainWindow.xaml"-->
+            <!--StartupUri="/MVVM/Views/ConnectionWindow.xaml"-->
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
