--- a/Application/MVVM/Views/LoadTagsConfigurationWindow.xaml
+++ b/Application/MVVM/Views/LoadTagsConfigurationWindow.xaml
@@ -1,18 +1,16 @@
-﻿<Window x:Class="PI_Replication_Tool.MVVM.Views.LoadTagsConfigurationWindow"
+﻿<Window x:Class="Views.LoadTagsConfigurationWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Views" 
-        xmlns:viewmodels="clr-namespace:ViewModels" 
-        mc:Ignorable="d"
+        xmlns:viewmodels="clr-namespace:ViewModels"
+            d:DataContext="{d:DesignInstance Type=viewmodels:LoadTagsConfigurationViewModel}"
+            mc:Ignorable="d"
         Title="PI Replication Tool" Height="450" Width="800">
     <Grid>
-        <Grid>
-            <Button
+        <Button
             Content="Next"
             Command="{Binding GoToPushTagsConfigurationView}"
             Width="90" Height="30" />
-        </Grid>
     </Grid>
 </Window>
