--- a/Application/MVVM/Views/MainWindow.xaml
+++ b/Application/MVVM/Views/MainWindow.xaml
@@ -1,9 +1,10 @@
-﻿<Window x:Class="PI_Replication_Tool.MVVM.Views.MainWindow"
+﻿<Window x:Class="Views.MainWindow"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:viewmodels="clr-namespace:ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:MainWindowViewModel}"
+      xmlns:viewmodels="clr-namespace:ViewModels" 
+      d:DataContext="{d:DesignInstance Type=viewmodels:MainWindowViewModel}"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="PI Replication Tool">
