--- a/Application/MVVM/Views/LoadTagsConfigurationWindow.xaml
+++ b/Application/MVVM/Views/LoadTagsConfigurationWindow.xaml
@@ -1,16 +1,18 @@
-﻿<Window x:Class="Views.LoadTagsConfigurationWindow"
+﻿<UserControl x:Class="Views.LoadTagsConfigurationWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:viewmodels="clr-namespace:ViewModels"
-            d:DataContext="{d:DesignInstance Type=viewmodels:LoadTagsConfigurationViewModel}"
-            mc:Ignorable="d"
-        Title="PI Replication Tool" Height="450" Width="800">
+        xmlns:Viewmodel="clr-namespace:ViewModels" mc:Ignorable="d"
+        Height="450" Width="800">
+    <UserControl.DataContext>
+        <Viewmodel:LoadTagsConfigurationViewModel/>
+    </UserControl.DataContext>
+    
     <Grid>
         <Button
             Content="Next"
             Command="{Binding GoToPushTagsConfigurationView}"
             Width="90" Height="30" />
     </Grid>
-</Window>
+</UserControl>
