--- a/Application/MVVM/Views/MainWindow.xaml
+++ b/Application/MVVM/Views/MainWindow.xaml
@@ -3,13 +3,17 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:viewmodels="clr-namespace:ViewModels" 
-      d:DataContext="{d:DesignInstance Type=viewmodels:MainWindowViewModel}"
-      mc:Ignorable="d" 
+      xmlns:viewmodels="clr-namespace:ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:MainWindowViewModel}"
+        mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="PI Replication Tool">
+
+    <Window.DataContext>
+        <viewmodels:MainWindowViewModel/>
+    </Window.DataContext>
 
     <Grid>
         <ContentControl Content="{Binding CurrentPageViewModel}" />
     </Grid>
+    
 </Window>
