--- a/Application/MVVM/Views/PushTagsConfigurationWindow.xaml
+++ b/Application/MVVM/Views/PushTagsConfigurationWindow.xaml
@@ -1,14 +1,20 @@
 ﻿<UserControl x:Class="Views.PushTagsConfigurationWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
-        Height="450" Width="800">
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:Viewmodel="clr-namespace:ViewModels"
+      mc:Ignorable="d" 
+      d:DesignHeight="450" d:DesignWidth="800">
+
+    <UserControl.DataContext>
+        <Viewmodel:PushTagsConfigurationViewModel/>
+    </UserControl.DataContext>
+
     <Grid>
         <Button
-            Content="back"
-            Command="{Binding GoToLoadTagsConfigurationView}"
+            Content="Next"
+            Command="{Binding GoToPushTagsConfigurationView}"
             Width="90" Height="30" />
     </Grid>
 </UserControl>
